--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
   <div class="navbar-fixed">
     <nav class="turquoise" >
       <div class="nav-wrapper  container">
-        <a href="/" class="brand-logo ">Darkroom</a>
+        <a href="/" class="brand-logo ">Darkroom </a>
+        <a href="/" class="brand-logo ">Milestone 2 </a>
         <form class="right">
           <div class="input-field ">
             <input id="search" class="left"  type="search" required>
