--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
   <div class="navbar-fixed">
     <nav class="turquoise" >
       <div class="nav-wrapper  container">
-        <a href="/" class="brand-logo ">Darkroom  Milestone 2 Milestone 3</a>
+        <a href="/" class="brand-logo ">Darkroom  Milestone 2 Milestone 3 Milestone 4</a>
 
         <form class="right">
           <div class="input-field ">
